[package]
name = "minhook_test"
version = "0.1.0"
authors = ["green"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [ "winnt", "minwindef", "fileapi", "minwinbase" ]}
cty = "0.2.1"
widestring = "0.4.3"